13.9.2000	Teletext processed <garetxe@users.sourceforge.net>

	* src/zvbi.c, src/main.c: The teletext image is now received by
	the plugins, so it can be processed.
	* src/plugins.c: The plugin_sample struct no longer contains a
	GdkImage.
	* plugins/screenshot: Now it saves the current teletext page too.

12.9.2000	JPEG screenshots <garetxe@users.sourceforge.net>

	* plugins/screenshot.c: Now it uses JPEG format instead of PNG.
	* main.c: Added option to disable VBI on startup (avoid V4L2
	crashes)
	* src/zvbi.c: Added debug messages

11.9.2000	New release <garetxe@users.sourceforge.net>

	* html docs: Updated.
	* src/tveng.c: Support for command-line bpp added.
	* src/callbacks.c: The screensaver now goes to throttle mode when
	Fullscreen is used.
	* src/zmisc.h: Added some debug routines
	* src/main.c: populated with debugging messages

08.9.2000	History improved <garetxe@users.sourceforge.net>

	* glade/zapping.glade: txtcontrols redesigned, now it only shows
	the visited pages, not page + subpage. For using both, a tree
	would be better.
	* src/zvbi.c: Added a web-browser-like history, and a visited
	pages list. It's easier to navigate now. Added fast navigation
	("color" navigation, FLOF), and subpage/page recognision.
	* src/main.c: Added command line option --bpp.

07.9.2000	History implemented <garetxe@users.sourceforge.net>

	* src/txtcontrols.c: Previous, next work for pages and subpages,
	history is saved when setting pages.

06.9.2000	VBI integrated <garetxe@users.sourceforge.net>

	* glade/zapping.glade: VBI has been integrated into the GUI.
	* src/callbacks.c: Added code for switching to VBI
	* src/zvbi.c: Much less CPU usage (pre-rendered frames, draw only
	when neccessary)
	* pixmaps/vt_loading*: Two images (~11K) created for when the
	requested page isn't available.
	* src/channel_editor.c: Uses VBI for getting the station names.
	* src/main.c: Added config setting for saving the VBI state.
	* src/txtcontrols.c: Created, manages the VBI GUI.
